Removed legacy tool part recipes
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>